nohup.out
  File "main.py", line 9
    def matchJobThread(matchKey:str,blackWords:list):
                               ^
SyntaxError: invalid syntax
  File "main.py", line 9
    def matchJobThread(matchKey:str,blackWords:list):
                               ^
SyntaxError: invalid syntax
  File "main.py", line 9
    def matchJobThread(matchKey:str,blackWords:list):
                               ^
SyntaxError: invalid syntax
